@@ -1,3 +1,11 @@
+2009-02-25  Evi Vanoost  <vanooste@rcbi.rochester.edu>
+
+	* include/functions_reporting.php: Thanks to Esteban's functions found out
+	some bad performers. Fixed it
+	
+	* include/auth/ldap.php: Calling get_system_time() 800 times is too much.
+	Moved it to a variable.
+
 2009-02-25  Esteban Sanchez  <estebans@artica.es>
 
 	* include/functions_db.php: Do not show errors on sql_error_handler()
